[gd_scene load_steps=11 format=2]

[ext_resource path="res://objects/intro/sig_caleb.png" type="Texture" id=1]
[ext_resource path="res://objects/intro/agameby.png" type="Texture" id=3]
[ext_resource path="res://objects/intro/intrographics.gd" type="Script" id=4]
[ext_resource path="res://objects/intro/start.png" type="Texture" id=5]
[ext_resource path="res://objects/intro/title.png" type="Texture" id=6]
[ext_resource path="res://objects/intro/sig_erin.png" type="Texture" id=7]
[ext_resource path="res://objects/intro/sig_kwith.png" type="Texture" id=8]
[ext_resource path="res://objects/intro/sig_devin.png" type="Texture" id=9]
[ext_resource path="res://objects/intro/sig_danny.png" type="Texture" id=10]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.398949, 0.164934, 0.133974 )

[node name="IntroElements" type="Spatial"]
script = ExtResource( 4 )
signature_sprites = [ ExtResource( 10 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 1 ) ]

[node name="agameby" type="Sprite3D" parent="."]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 2, 0.244701, -1.33 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 500, 100, 250, 400 )

[node name="signature" type="Sprite3D" parent="agameby"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, -3.86452, -4.98484, 0 )
modulate = Color( 0.796078, 0.858824, 0.988235, 1 )
texture = ExtResource( 1 )

[node name="sig_visible_timer" type="Timer" parent="."]
wait_time = 3.66
one_shot = true

[node name="sig_hidden_timer" type="Timer" parent="."]
wait_time = 0.33

[node name="sig_opacity_tween" type="Tween" parent="."]

[node name="start_button" type="Area" parent="."]
transform = Transform( 0.66, 0, 0, 0, 0.66, 0, 0, 0, 0.66, -0.10645, -0.416086, -0.180891 )

[node name="CollisionShape" type="CollisionShape" parent="start_button"]
shape = SubResource( 1 )

[node name="Sprite3D" type="Sprite3D" parent="start_button/CollisionShape"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0.109158, 0 )
modulate = Color( 0.94, 0.5, 0.5, 1 )
texture = ExtResource( 5 )

[node name="title" type="Sprite3D" parent="."]
transform = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1, 0.444525, -0.00466061, -4.4 )
modulate = Color( 0.984314, 0.94902, 0.211765, 1 )
texture = ExtResource( 6 )
[connection signal="timeout" from="sig_visible_timer" to="." method="_on_sig_visible_timer_timeout"]
[connection signal="timeout" from="sig_hidden_timer" to="." method="_on_sig_hidden_timer_timeout"]
[connection signal="input_event" from="start_button" to="." method="_on_Area_input_event"]
[connection signal="mouse_entered" from="start_button" to="." method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="start_button" to="." method="_on_Area_mouse_exited"]
